# bili-worker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bili_worker/: __init__.py  __main__.py  _auth.py  _catalog.py  catalog.py  credential.py  errors.py  protocol.py  sdk_adapter.py  testing.py
tests/: test_catalog.py  test_credential.py  test_error_mapping_parity.py  test_protocol.py  test_worker_lifecycle.py
