[project]
name = "bili-worker"
version = "0.1.0"
description = "GPL-3.0 worker process that isolates all bilibili-api SDK calls behind an arm's-length stdio JSON protocol (F2 process isolation for bili-unit)."
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "ChosenEcho" }]
dependencies = [
    "bilibili-api-python~=17.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
anti-detect = ["curl_cffi>=0.7.0"]

[project.scripts]
bili-worker = "bili_worker.__main__:main"

[project.urls]
Homepage = "https://github.com/SuperCatQR/bili-worker"
Repository = "https://github.com/SuperCatQR/bili-worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bili_worker"]
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["bili_worker"]
